--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,7 @@
       <nav class="clear">
         <div><a href="{{path("home")}}"><i class="fas fa-home"></i>Home</a></div>
         <div><a href="{{path("about")}}"><i class="fas fa-info"></i>A propos</a></div>
-        <div><a href="{{path("home")}}"><i class="fas fa-user"></i></i>Connection</a></div>
+        <div><a href="{{path("app_login")}}"><i class="fas fa-user"></i></i>Connection</a></div>
         <div><a href="{{asset('connectionadmin/index.html.twig')}}"><i class="fas fa-home"></i>Connection administrateur</a></div>
       </nav>
     </header>
