--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -8,6 +8,7 @@
   <section class="formulaire">
     {{ include('project/_form.html.twig') }}
   </section>
-
+  <section class="button">
     <a href="{{ path('project_index') }}" class="liens">back to list</a>
+  </section>
 {% endblock %}
