--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -8,9 +8,9 @@
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
   </section>
 
-  <section class="center">
+  <section  class="button">
     <a href="{{ path('user_index') }}" class="liens">back to list</a>
+  </section>
 
     {{ include('user/_delete_form.html.twig') }}
-  </section>
 {% endblock %}
