--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -31,8 +31,10 @@
                 <td>{{ user.city }}</td>
                 <td>{{ user.avatar }}</td>
                 <td>
+                  <section class="linkintable">
                     <a href="{{ path('user_show', {'id': user.id}) }}" class="liens">show</a>
                     <a href="{{ path('user_edit', {'id': user.id}) }}" class="liens">edit</a>
+                  </section>
                 </td>
             </tr>
         {% else %}
@@ -40,9 +42,9 @@
                 <td colspan="9">no records found</td>
             </tr>
         {% endfor %}
-        </tbody>
+      </tbody>
     </table>
-    <div class="center">
-      <a href="{{ path('user_new') }}" class="liens" class="center">Create new</a>
-    </div>
+    <section class="button">
+      <a href="{{ path('user_new') }}" class="liens">Create new</a>
+    </section>
 {% endblock %}
