--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -42,10 +42,11 @@
         </tbody>
     </table>
 
-  <section class="center">
-    <a href="{{ path('user_index') }}" class="liens" class="center">back to list</a>
-    <a href="{{ path('user_edit', {'id': user.id}) }}" class="liens" class="center">edit</a>
+  <section class="button">
+    <a href="{{ path('user_index') }}" class="liens">back to list</a>
+    <a href="{{ path('user_edit', {'id': user.id}) }}" class="liens">edit</a>
+  </section>
 
     {{ include('user/_delete_form.html.twig') }}
-  </section>
+
 {% endblock %}
