--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,7 +15,7 @@
 
     </div>
 
-      {{ include("vignette_project/index.html.twig") }}
+      {{ include("home/vignettesproject.html.twig") }}
 
     </section>
   <section class="aside">
@@ -28,7 +28,7 @@
       </div>
     </aside>
   </section>
-  <script type="text/javascript" src="{{asset("js/vignettes.js")}}"></script>
+  <!-- <script type="text/javascript" src="{{asset("js/vignettes.js")}}"></script> -->
 </body>
 
 {% endblock %}
