--- a/templates/home/vignettesproject.html.twig
+++ b/templates/home/vignettesproject.html.twig
@@ -2,7 +2,7 @@
     <div>
       {% for project in projects %}
       <figure>
-      <a href="{{ path('project_show', { 'id': project.id }) }}" ><img src="{{asset('uploads/illustration/'~project.illustration) }}"></a>
+      <a href="{{ path('project_public_show', { 'id': project.id }) }}" ><img src="{{asset('uploads/illustration/'~project.illustration) }}"></a>
         <figcaption>{{ project.title }}</figcaption>
       </figure>
       {% endfor %}
