--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -9,7 +9,7 @@
   </section>
 
   <section class="button">
-    <a href="{{ path('project_index') }}">back to list</a>
+    <a href="{{ path('project_index') }}" class="liens">back to list</a>
   </section>
     {{ include('project/_delete_form.html.twig') }}
 {% endblock %}
