Mise a jour de la recheche de project par date

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,6 +57,7 @@
      {% else %}
      <div><a href="{{path("app_login")}}"><i class="fas fa-user"></i></i>Connection</a></div>
       {% endif %}
+      <div><a href="{{path("home")}}"><i class="fas fa-search"></i></i>Recherche</a></div>
 
       </nav>
     </header>
