--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,12 @@
 /* base.html*/
 
+body{
+  background: radial-gradient(#C0C0C0, #909090);
+  color : #696969;
+  font-family: FreeMono, monospace;
+
+}
+
 .clear {
   clear:both;
 }
@@ -33,7 +40,7 @@
 }
 
 .basehtml nav a {
-  color: yellow;
+  color: red;
   text-decoration: none;
 }
 
@@ -49,18 +56,21 @@
 }
 
 .basehtml nav {
-  background: radial-gradient(#C0C0C0, #696969);
+  background: radial-gradient(#C0C0C0, #909090);
   padding: 6px 8px;
   /*background-color : #696969;*/
   padding-top: 15px;
   padding-bottom: 15px;
+  border : 2px solid yellow;
+
 }
+
 
 /* homepage */
 .homehtml aside {
   /* background-color: grey; */
   float: right;
-  width: 29%;
+  width: 24%;
   text-align: center;
 }
 
@@ -181,6 +191,20 @@ section.linkintable {
   color : grey;
 }
 
+/* VIGNETTES PROJECT */
+
+.vignetteproject {
+  border: 3px solid black;
+  border-radius: 30px 30px 30px;
+  margin: 30px;
+
+}
+
+.vignettestitle {
+  color:yellow;
+  text-align: center;
+}
+
 /*TABLE*/
 
 .table {
@@ -211,14 +235,38 @@ table.table td img{
 
 /* MAPPING LEAFLET */
 
-#mapid { height: 600px; }
-
-.carte {
+#mapid {
+  height: 300px;
+  border : 2px solid black;
 
 }
 
+.projectsearch {
+
+  text-align: center;
+  background-color: yellow;
+  /* background: radial-gradient(#C0C0C0, #909090); */
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+}
+
+.projectsearchcolor {
+  background-color: yellow;
+  color : #696969;
+  border-radius: 30px 30px 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+
+
+
 
 /* ASIDE */
+
 
 h1.asidetitle {
   color : red;
